--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,7 @@ span {
 
 #projects .projects-header h1 {
   margin-bottom: 50px;
+
 }
 
 #projects .all-projects {
@@ -436,19 +437,22 @@ span {
 }
 
 #projects .project-tile h1 {
-  font-size: 2.5rem;
+  font-size: 2.6rem;
   font-weight: 500;
   line-height: 1em;
+  padding-bottom: 10px;
+  border-bottom: 1px dashed #fff;
 }
 
 #projects .project-tile h2 {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 400;
   margin-top: 10px;
 }
 
 #projects .project-tile p {
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 300;
   color: #fff;
 }
 
@@ -503,7 +507,7 @@ span {
 }
 
 #about .col-left {
-  width: 250px;
+  width: 100%;
   height: 360px;
 }
 
@@ -555,6 +559,8 @@ span {
 #about .col-left img {
   border-radius: 10px;
 }
+
+
 
 /*end of About Section*/
 
