--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ span {
   color: crimson;
 }
 #skills .skills-top {
+
   width: 500px;
   margin: 0px auto;
 }
@@ -316,7 +317,7 @@ span {
   justify-content: center;
   flex-direction: column;
   padding: 30px;
-  border-radius: 10px;
+  border-radius: 4px;
 
   background-image: url(./img/domenico-loia-hGV2TfOh0ns-unsplash.jpg);
   background-size: cover;
@@ -333,8 +334,11 @@ span {
   overflow: hidden;
 }
 #skills .skills-item:hover {
-  transition: 0.3s ease;
+  transition: 0.3s ease-in-out;
   filter: grayscale(0);
+  border-radius: 10px;
+
+
 }
 #skills .skills-item a {
   color: rgb(5, 255, 5);
@@ -527,6 +531,7 @@ span {
 #about .col-right p {
   margin-bottom: 20px;
   overflow: auto;
+  text-align: left;
 }
 .camp_hub {
   display: flex;
@@ -687,7 +692,14 @@ span {
   #welcome-section .cta {
     font-size: 4rem;
   }
-
+  #hero-h1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #hero-h1 h1{
+    padding-top: 20px;
+  }
   /*End of Hero*/
 
   /*Skills Section*/
@@ -823,8 +835,26 @@ span {
     position: relative;
     overflow: hidden;
   }
-  
+  .hero{
+    text-align: center;
+  }
+  #hero-h1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 6rem;
 
+  }
+  #hero-h1 h1{
+    padding-top: 20px;
+  }
+  h1.section-title {
+    font-size: 6rem;
+  }
+
+  /*Hero*/
+  
+  
   /*header*/
   #header .hamburger {
     display: none;
@@ -855,6 +885,11 @@ span {
     flex-basis: 33%;
     margin: 1.5%;
     height: 300px;
+  }
+  #skills .skills-top p{
+    text-align: center;
+    width: 80%;
+    margin:  auto;
   }
 
   .container p {
