--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html {
 .progress-container {
   width: 100%;
   height: 3px;
-  background: #ccc;
+  background: transparent;
 }
 
 /* The progress bar (scroll indicator) */
