edited skills tile background to show image

--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ span {
   justify-content: center;
   flex-direction: column;
   padding: 30px;
-  background-image: url(./img/domenico-loia-hGV2TfOh0ns-unsplash.jpg);
+  background-image: url(/img/domenico-loia-hGV2TfOh0ns-unsplash.jpg);
   background-size: cover;
   margin: 10px 5%;
   position: relative;
