added a overflow hidden to welcome section

--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,7 @@ span {
   position: relative;
   /*to allow overlay of this section*/
   z-index: 1;
+  overflow: hidden;
 }
 
 #welcome-section::after {
