--- a/css/style.css
+++ b/css/style.css
@@ -561,12 +561,12 @@ span {
 .profile-link {
   background: var(--overlay);
   color: #fff;
-  padding: 3px;
-  font-size: 1.7rem;
-  width: 70%;
+  padding: 4px;
+  margin: 5px;
+  font-size: 2.5rem;
+  width: 80%;
   border-radius: 4px;
-  transition: 1s;
-  transition-property: all;
+  transition: .4s;
 }
 
 .profile-link:hover {
