--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ span {
 
 /*welcome-section*/
 #welcome-section {
-  background-image: url(../img/unit3-sky.jpg);
+  background-image: url(../img/unit3.jpg);
   background-size: cover;
   background-position: top center;
   position: relative;
@@ -339,7 +339,7 @@ span {
   justify-content: center;
   flex-direction: column;
   padding: 30px;
-  background-image: url(../img/domenico-loia-hGV2TfOh0ns-unsplash.jpg);
+  background-image: url('../img/lee-campbell-DtDlVpy-vvQ-unsplash.jpg');
   
   background-size: cover;
   margin: 10px 5%;
