added a hover effect to header button

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ span {
   transition-property: background-color, color;
 }
 
-.cta:hover {
+#cta-header:hover {
   color: #fff;
   background-color: crimson;
 }
