--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ span {
 }
 
 #header .nav-list ul li:hover a {
+  transition: .3s ease-in-out;
   color: crimson;
 }
 
@@ -181,6 +182,7 @@ span {
   text-transform: uppercase;
   padding: 20px;
   display: block;
+  transition: .2s ease-in-out;
 }
 
 #header .nav-list ul a::after {
@@ -350,10 +352,16 @@ span {
   
   /*border radius not visiblie without hidden overflow*/
 }
-#skills .skills-item p {
-  text-overflow: ellipsis;
-}
 
+
+
+#skills .skills-item li{
+  color: #fff;
+  font-size: 1.4rem;
+  text-align: left;
+  margin: 20px;
+  
+}
 
 #skills .skills-item a {
   color: rgb(5, 255, 5);
@@ -382,6 +390,9 @@ span {
   color: #fff;
   margin-bottom: 10px;
   text-transform: uppercase;
+  text-decoration: underline 2px crimson;
+  
+  
 }
 
 #skills .skills-item {
