--- a/css/style.css
+++ b/css/style.css
@@ -389,9 +389,8 @@ span {
   font-size: 2rem;
   color: #fff;
   margin-bottom: 10px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-decoration: underline 2px crimson;
-  
   
 }
 
@@ -924,8 +923,11 @@ span {
     width: 80%;
     margin:  auto;
   }
+  #skills .skills-item{
+    filter: grayscale(0.6);
+  }
   #skills .skills-item:hover {
-    
+    filter: grayscale(0);
     transform: scale(1.05);
   
   }
