--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 img {
@@ -349,6 +350,7 @@ span {
   transition: 0.3s ease-in-out;
   overflow: hidden;
   border-radius: 10px;
+  height: 300px;
   
   /*border radius not visiblie without hidden overflow*/
 }
@@ -397,6 +399,7 @@ span {
 #skills .skills-item {
   line-height: 1.9rem;
 }
+
 #skills .skills-top {
   
   width: 90%;
@@ -412,7 +415,47 @@ span {
   margin-bottom: 20px;
 }
 
-/*End of Services Section*/
+/*Dropdown*/
+/* Dropdown Button */
+.dropbtn {
+  background: #dc143c;
+  color: white;
+  width: 500px;
+  padding: 5px;
+  font-size: 2em;
+  cursor: pointer;
+  border-radius: 10px;
+
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background: var(--overlay);
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  background-color: #f1f1f1;
+  width: 100vw;
+  z-index: 1;
+}
+
+
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+/*end of Dropdown*/
+
+/*End of Skills Section*/
 
 /*Projects Section*/
 #projects .projects {
