--- a/css/style.css
+++ b/css/style.css
@@ -420,11 +420,12 @@ span {
 .dropbtn {
   background: #dc143c;
   color: white;
-  width: 500px;
+  width: 80vw;
   padding: 5px;
   font-size: 2em;
   cursor: pointer;
   border-radius: 10px;
+  text-align: center;
 
 }
 
@@ -436,6 +437,7 @@ span {
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
+  margin: 0 auto;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -444,6 +446,8 @@ span {
   background-color: #f1f1f1;
   width: 100vw;
   z-index: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 
