--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ span {
 }
 #skills .skills-top {
   width: 500px;
-  margin: 0px auto;
+  margin: 20px auto;
   text-align: center;
 }
 
@@ -426,6 +426,7 @@ span {
   cursor: pointer;
   border-radius: 10px;
   text-align: center;
+  font-family: "Montserrat", sans-serif;
 
 }
 
@@ -438,6 +439,7 @@ span {
 .dropdown {
   position: relative;
   margin: 0 auto;
+  
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -448,6 +450,7 @@ span {
   z-index: 1;
   justify-content: center;
   align-items: center;
+  
 }
 
 
@@ -462,6 +465,11 @@ span {
 /*End of Skills Section*/
 
 /*Projects Section*/
+#projectsDropdown{
+  background: var(--overlay);
+  width: 90vw;
+  border-radius: 10px;
+}
 #projects .projects {
   flex-direction: column;
   max-width: 1200px;
@@ -493,7 +501,7 @@ span {
 }
 
 #projects .project-tile {
-  padding: 30px;
+  padding: 30px ;
   flex-basis: 50%;
   height: 100%;
   line-height: 1.9rem;
@@ -582,6 +590,10 @@ span {
 #about .col-left {
   width: 100%;
   height: 360px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 #about .col-right {
@@ -601,41 +613,49 @@ span {
   text-overflow: ellipsis;
   text-align: left;
 }
-.camp_hub {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+
+#profile-link{
+  color: #fff;
+  width: 100%;
 }
 .profile-link {
   background: var(--overlay);
   color: #fff;
+  text-align: center;
   padding: 4px;
   margin: 5px;
   font-size: 2.5rem;
-  width: 80%;
-  border-radius: 4px;
+  width: 60%;
+  border-radius: 5px;
   transition: .4s;
 }
 
 .profile-link:hover {
   transition: .4s ease-in-out ;
   color: crimson;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 #about .col-left .about-img {
   height: 100%;
-  width: 100%;
+  width: 80%;
   position: relative;
   border: 10px solid #fff;
 }
 
 #about .col-left img {
   border-radius: 10px;
+  margin: 20px auto;
 }
-
-
+.fcc-link{
+  color: #dc143c;
+}
+.fcc-link:hover{
+  color: #333;
+}
+#cv{
+  color: #dc143c;
+}
 
 /*end of About Section*/
 
@@ -867,6 +887,7 @@ span {
     margin: 5px;
     font-size: 1.5rem;
     text-align: center;
+    width: 30%;
   }
 
   /*End of About*/
@@ -1004,7 +1025,6 @@ span {
   /*about*/
   .profile-link {
     font-size: 2.2rem;
-    width: 70%;
   }
   .camp_hub {
     justify-content: space-evenly;
