--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ span {
 /*Dropdown*/
 /* Dropdown Button */
 .dropbtn {
-  background: #dc143c;
+  background: linear-gradient(0deg, #dc134c, #333);
   color: white;
   width: 80vw;
   padding: 5px;
