--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,17 @@ span {
 .section-title span {
   color: #dc143c;
 }
-
+#aka span{
+  position: relative;
+  display: inline-block;
+  animation: aka 2s infinite ease;
+}
+@keyframes aka{
+  100%{
+    transform: translateY(50px);
+    opacity: 0;
+  }
+}
 #cta-header {
   position: relative;
   display: inline-block;
@@ -95,8 +105,8 @@ span {
   font-size: 2rem;
   font-weight: 500;
   border-radius: 10px;
-  margin-top: 30px;
-  transition: 0.3s ease;
+  margin: 30px 5px;
+  transition: 3s ease;
   transition-property: background-color, color;
   animation: cta-animate .3s ease;
   
@@ -120,14 +130,13 @@ span {
   }
   20%{
       transform: translateY(-5px);
-      color: yellowgreen;
+      color: #dc143c;
       background: linear-gradient(0deg, #000, #dc243c, #000);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       text-transform: uppercase;
   }
   30%{
-    transform: translateX(5px);
   }
   40%, 100%{
       transform: translateY(0);
@@ -137,7 +146,9 @@ span {
 /*end of cta keyframes*/
 
 #cta-header:hover {
+  transition: .2s;
   background: linear-gradient(0deg, #dc134c, #333);
+  box-shadow: none;
 }
 #cta-header {
   font-size: 3rem;
@@ -509,9 +520,48 @@ span {
 
 #projects .projects-header h1 {
   margin-bottom: 50px;
-
 }
 
+
+#profile-link{
+  color: #fff;
+  width: 100%;
+  background: linear-gradient(0deg, #dc134c, #333);
+  color: #fff;
+  text-align: center;
+  padding: 3px;
+  margin: 5px;
+  font-size: 2.5rem;
+  width: 60%;
+  border-radius: 5px;
+  transition: all .4s;}
+
+/* 
+.profile-link {
+  background: linear-gradient(0deg, #dc134c, #333);
+  color: #fff;
+  text-align: center;
+  padding: 3px;
+  margin: 5px;
+  font-size: 2.5rem;
+  width: 60%;
+  border-radius: 5px;
+  transition: all .4s;
+} */
+
+#profile-link:hover {
+  transition: .4s ease-in-out ;
+  border-radius: 10px;
+  color: #fff;
+}
+#profile-link span{
+  animation: spaner 2s infinite ease;
+}
+@keyframes spaner{
+  50%{
+    color: #fff;
+  }
+}
 #projects .all-projects {
   display: flex;
   align-items: center;
@@ -644,27 +694,6 @@ span {
   text-align: left;
 }
 
-#profile-link{
-  color: #fff;
-  width: 100%;
-}
-.profile-link {
-  background: var(--overlay);
-  color: #fff;
-  text-align: center;
-  padding: 4px;
-  margin: 5px;
-  font-size: 2.5rem;
-  width: 60%;
-  border-radius: 5px;
-  transition: .4s;
-}
-
-.profile-link:hover {
-  transition: .4s ease-in-out ;
-  color: crimson;
-  border-radius: 10px;
-}
 
 #about .col-left .about-img {
   height: 100%;
