--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ span {
   position: relative;
   display: inline-block;
   animation: aka 5s infinite ease;
+  margin: 0 40px;
 }
 @keyframes aka{
   100%{
@@ -115,12 +116,11 @@ span {
 }
 
 
-
 #cta-header span {
   position: relative;
   display: inline-block;
   color: #fff;
-  font-size: 2.6rem;
+  font-size: 3rem;
   animation: animate 3s ease-in-out infinite;
   animation-delay: calc(0.2s * var(--i))
 }
@@ -875,6 +875,12 @@ span {
   #hero-h1 h1{
     padding-top: 20px;
   }
+  #cta-header span{
+    font-size: 5.4rem;
+  }
+#aka span{
+  font-size: 4rem;
+}
   /*End of Hero*/
 
   /*Skills Section*/
@@ -1013,7 +1019,7 @@ span {
 /*End of Media Query for tablet*/
 
 /*Media Query for Desktop*/
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1024px) {
   #welcome-section {
     background-size: contain no-repeat;
     background-position: center;
@@ -1036,7 +1042,12 @@ span {
   h1.section-title {
     font-size: 6rem;
   }
-
+  #cta-header span{
+    font-size: 5rem;
+  }
+#aka span{
+  font-size: 4rem;
+}
   /*Hero*/
   
   
