--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,13 @@ span {
   margin: 0 40px;
 }
 @keyframes aka{
-  100%{
+  50%{
     transform: translateY(50px);
     opacity: 0;
+  }
+  100%{
+    transform: translateY(0px);
+    opacity: 1;
   }
 }
 #cta-header {
